--- a/share.html
+++ b/share.html
@@ -141,6 +141,50 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article018.html">
+							<img src="images/Article/article018.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">與其要求孩⼦分享，不如教會他等待輪候</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 111 </i>
+								<i class="fa fa-heart-o"> 87 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article017.html">
+							<img src="images/Article/article017.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">你的ASD孩子有視覺⾃我刺激⾏為嗎?</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 5分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 108 </i>
+								<i class="fa fa-heart-o"> 96 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article016.html">
 							<img src="images/Article/article016.png" alt="Card image">
 							<div class="line"></div>
@@ -551,10 +595,10 @@
 
 	<script type="text/javascript">
 		$(document).ready(function () {
-			var itemsPerPage = 9; 
-			var $cards = $('.card'); 
-			var totalItems = $cards.length; 
-			var totalPages = Math.ceil(totalItems / itemsPerPage); 
+			var itemsPerPage = 9;
+			var $cards = $('.card');
+			var totalItems = $cards.length;
+			var totalPages = Math.ceil(totalItems / itemsPerPage);
 
 			$cards.hide().slice(0, itemsPerPage).show();
 
