--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">你的ASD孩子有視覺⾃我刺激⾏為嗎?</h5><br>
+							<h5 class="card-title">你的ASD孩子有視覺⾃我刺激⾏為嗎?</h5>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
