--- a/article/article018.html
+++ b/article/article018.html
@@ -23,13 +23,13 @@
 	<link href="../css/font-awesome.css" rel="stylesheet">
 	<!-- //font-awesome icons -->
 	<!-- font -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
+	<link href="https://fonts.googleapis.com/css？family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
 		type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css？family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
 	<link
-		href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+		href="https://fonts.googleapis.com/css？family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
 		rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
+	<link href='https://fonts.googleapis.com/css？family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
 		rel='stylesheet' type='text/css'>
 	<!-- //font -->
 	<script src="../js/jquery-1.11.1.min.js"></script>
@@ -58,13 +58,13 @@
 		function shareToWhatsApp() {
 			const url = encodeURIComponent(window.location.href);
 			const text = encodeURIComponent('看看這篇文章！');
-			window.open(`https://wa.me/?text=${text} ${url}`, '_blank');
+			window.open(`https://wa.me/？text=${text} ${url}`, '_blank');
 		}
 
 		// Sharing to Facebook
 		function shareToFacebook() {
 			const url = encodeURIComponent(window.location.href); // The current page URL
-			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
+			window.open(`https://www.facebook.com/sharer/sharer.php？u=${url}`, '_blank');
 		}
 
 
@@ -224,13 +224,13 @@
 
 					<h4><b>以上的說話有三大原則：</b></h4>
 					一. 讓孩子有時間作心理準備，不是大⼈一講就⽴即要他將玩具交給其他⼩朋友。哪怕只是3分鐘<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;甚或1分鐘都很⾜夠，重點在於讓孩子有緩衝的空間。家長試⾏時，可能會發現未到你設定的<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;時間，孩子就⾃動⾃覺將玩具交出呢！<br>
-					⼆. 「分享」是不能被強迫的。將心比⼰，如果硬要你將心愛重視的東西分一半予他⼈，你又是否<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;心⽢情願?建議讓孩子知道有「分享」這個選擇，⽽且你⿎勵他這樣做。當你將決定權交回孩<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;子⼿中，往往會有喜出望外的結果！<br>
+					⼆. 「分享」是不能被強迫的。將心比⼰，如果硬要你將心愛重視的東西分一半予他⼈，你又是否<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;心⽢情願？建議讓孩子知道有「分享」這個選擇，⽽且你⿎勵他這樣做。當你將決定權交回孩<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;子⼿中，往往會有喜出望外的結果！<br>
 					三. 說出眼⾒的客觀事實：「有⼈玩緊」，讓孩子學習掌握社交規則及理解現實限制 。<br><br>
 					
 					<h4><b>總結</b></h4>
-					作為⽗母，有時需要審視⾃⼰的一⾏一⾔有否將⾃⼰的期望強加於子女身上。你是否追求當仔仔願意分享⽽獲得稱讚時的那份驕傲?你是否想成為⼈⼈眼中的「好媽媽」?是否害怕當囡囡選擇不分享時被標籤為「⾃私」以及「唔識教」?<br><br>
+					作為⽗母，有時需要審視⾃⼰的一⾏一⾔有否將⾃⼰的期望強加於子女身上。你是否追求當仔仔願意分享⽽獲得稱讚時的那份驕傲？你是否想成為⼈⼈眼中的「好媽媽」？是否害怕當囡囡選擇不分享時被標籤為「⾃私」以及「唔識教」？<br><br>
 
-					的確，我們都希望⾃⼰及子女得到他⼈的正⾯評價，這是⼈之常情；然⽽我們難以控制他⼈的說話。當你和子女聽到有⼈說「點解唔分享呀?一齊玩吖嘛，⾃私唔好㗎！」你可以向孩子說：「媽媽聽到姨姨話你⾃私，媽媽覺得你唔係，當然媽媽⿎勵你分享，不過你呢一刻選擇⾃⼰玩，媽媽明⽩。」孩子由你身上獲得的理解和尊重，比任何外在評價都來得珍貴。<br><br>
+					的確，我們都希望⾃⼰及子女得到他⼈的正⾯評價，這是⼈之常情；然⽽我們難以控制他⼈的說話。當你和子女聽到有⼈說「點解唔分享呀？一齊玩吖嘛，⾃私唔好㗎！」你可以向孩子說：「媽媽聽到姨姨話你⾃私，媽媽覺得你唔係，當然媽媽⿎勵你分享，不過你呢一刻選擇⾃⼰玩，媽媽明⽩。」孩子由你身上獲得的理解和尊重，比任何外在評價都來得珍貴。<br><br>
 
 					把這篇⽂章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。<br>
 					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！
