--- a/article/article017.html
+++ b/article/article017.html
@@ -23,13 +23,13 @@
 	<link href="../css/font-awesome.css" rel="stylesheet">
 	<!-- //font-awesome icons -->
 	<!-- font -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
+	<link href="https://fonts.googleapis.com/css？family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
 		type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css？family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
 	<link
-		href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+		href="https://fonts.googleapis.com/css？family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
 		rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
+	<link href='https://fonts.googleapis.com/css？family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
 		rel='stylesheet' type='text/css'>
 	<!-- //font -->
 	<script src="../js/jquery-1.11.1.min.js"></script>
@@ -58,13 +58,13 @@
 		function shareToWhatsApp() {
 			const url = encodeURIComponent(window.location.href);
 			const text = encodeURIComponent('看看這篇文章！');
-			window.open(`https://wa.me/?text=${text} ${url}`, '_blank');
+			window.open(`https://wa.me/？text=${text} ${url}`, '_blank');
 		}
 
 		// Sharing to Facebook
 		function shareToFacebook() {
 			const url = encodeURIComponent(window.location.href); // The current page URL
-			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
+			window.open(`https://www.facebook.com/sharer/sharer.php？u=${url}`, '_blank');
 		}
 
 
@@ -176,7 +176,7 @@
 			<div class="article">
 				<div class="narrow-text">
 					<div style="display: flex; justify-content: space-between; align-items: center;">
-						<h2>你的ASD孩子有視覺自我刺激行為嗎?</h2>
+						<h2>你的ASD孩子有視覺自我刺激行為嗎？</h2>
 						<div style="position: relative; display: inline-block;">
 							<button class="btn btn-success"
 								style="position: relative; display: flex; align-items: center;"
@@ -216,14 +216,14 @@
 				<hr>
 				<div class="panel-body narrow-text">
 
-					你的孩子會否從眼角斜視外界、在自⼰眼前甩動手指，或對轉動物品異常著迷?<br>
+					你的孩子會否從眼角斜視外界、在自⼰眼前甩動手指，或對轉動物品異常著迷？<br>
 					如果是這樣的話，你的孩子可能有視覺自我刺激(Visual Stimming)。<br><br>
 
 					更多關於自閉症譜系障礙(ASD)的文章：<br>
 					<a href="https://prowayst.com/article/article014.html"><b style="color: brown;">自閉症譜系障礙5大特徵</b></a><br>
 					<a href="https://prowayst.com/article/article09.html"><b style="color: brown;">自閉症譜系障礙與聲量控制</b></a><br><br>
 				
-					<h4><b>什麼是視覺自我刺激?</b></h4>
+					<h4><b>什麼是視覺自我刺激？</b></h4>
 					視覺自我刺激是自閉症孩子常⾒的一種自我刺激行為。<br><br>
 
 					以下重複性行為是較常⾒的例子：<br>
@@ -234,19 +234,19 @@
 					- 視覺追蹤或從眼角窺視<br>
 					- 擺放物品，例如排列物品<br><br>
 
-					<h4><b>ASD孩子為什麼會自我刺激?</b></h4>
+					<h4><b>ASD孩子為什麼會自我刺激？</b></h4>
 					ASD孩子的自我刺激行為相信是用作滿足感覺訊息的需要，幫助他們：<br>
 					- 減少感官過載，幫助自⼰冷靜<br>
 					- 刺激感官<br>
 					- 適應不熟悉的環境，減輕焦慮<br>
 					- 表達沮喪，特別是在難以進行有效溝通時<br><br>
 
-					<h4><b>應該怎樣幫助孩子?</b></h4>
+					<h4><b>應該怎樣幫助孩子？</b></h4>
 					<h4><b>以下問題幫助你更了解孩子的自我刺激行為：</b></h4>
-					- 孩子是否感到疲倦、飢餓、焦慮、無聊、沮喪或有壓⼒?<br>
-					- 是否有太多突如其來的變化?<br>
-					- 會否在某地方或與某人一起時出現得較頻密?<br>
-					- 這有助於孩子冷靜嗎?<br><br>
+					- 孩子是否感到疲倦、飢餓、焦慮、無聊、沮喪或有壓⼒？<br>
+					- 是否有太多突如其來的變化？<br>
+					- 會否在某地方或與某人一起時出現得較頻密？<br>
+					- 這有助於孩子冷靜嗎？<br><br>
 
 					<h4><b>如果你的孩子對視覺輸入反應遲鈍(Under-responsive)：</b></h4>
 					對視覺輸入反應遲鈍的孩子會尋求更多視覺刺激來喚醒大腦。你可以嘗試：<br><br>
