--- a/article/article017.html
+++ b/article/article017.html
@@ -7,10 +7,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
-	<meta property="og:title" content="提升親子關係：親子「特別遊戲時間」" />
-	<meta property="og:description" content="遊戲就像是孩子的語言，是成長過程中的重要部分，孩子透過玩會「玩出想法和感受」，釋放情緒同時發揮想像力及創造力。而親子「特別遊戲時間」..." />
-	<meta property="og:image" content="../images/Article/article016.png" />
-	<meta property="og:url" content="article/article016.html" />
+	<meta property="og:title" content="你的ASD孩子有視覺自我刺激行為嗎？" />
+	<meta property="og:description" content="你的孩子會否從眼角斜視外界、在自⼰眼前甩動手指，或對轉動物品異常著迷？..." />
+	<meta property="og:image" content="../images/Article/article017.png" />
+	<meta property="og:url" content="article/article017.html" />
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- bootstrap-css -->
