--- a/article/article018.html
+++ b/article/article018.html
@@ -8,9 +8,9 @@
 	<meta charset="utf-8">
 	<meta name="keywords" content="" />
 	<meta property="og:title" content="與其要求孩子分享，不如教會他等待輪候" />
-	<meta property="og:description" content="為⼈⽗母都希望⾃⼰的⼩朋友可以做到分享不⾃私、等待不爭玩具；但孩子的各項情緒社交能⼒仍..." />
-	<meta property="og:image" content="../images/Article/article018.png" />
-	<meta property="og:url" content="article/article018.html" />
+	<meta property="og:description" content="為⼈⽗母都希望⾃⼰的⼩朋友可以做到分享不⾃私、等待不爭玩具；但孩子的各項情緒社交能⼒仍處於..." />
+	<meta property="og:image" content="../images/Article/article017.png" />
+	<meta property="og:url" content="article/article017.html" />
 	<script
 		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<!-- bootstrap-css -->
@@ -23,13 +23,13 @@
 	<link href="../css/font-awesome.css" rel="stylesheet">
 	<!-- //font-awesome icons -->
 	<!-- font -->
-	<link href="https://fonts.googleapis.com/css？family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
 		type="text/css">
-	<link href="https://fonts.googleapis.com/css？family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
 	<link
-		href="https://fonts.googleapis.com/css？family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+		href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
 		rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css？family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
 		rel='stylesheet' type='text/css'>
 	<!-- //font -->
 	<script src="../js/jquery-1.11.1.min.js"></script>
@@ -58,13 +58,13 @@
 		function shareToWhatsApp() {
 			const url = encodeURIComponent(window.location.href);
 			const text = encodeURIComponent('看看這篇文章！');
-			window.open(`https://wa.me/？text=${text} ${url}`, '_blank');
+			window.open(`https://wa.me/?text=${text} ${url}`, '_blank');
 		}
 
 		// Sharing to Facebook
 		function shareToFacebook() {
 			const url = encodeURIComponent(window.location.href); // The current page URL
-			window.open(`https://www.facebook.com/sharer/sharer.php？u=${url}`, '_blank');
+			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
 		}
 
 
@@ -208,7 +208,7 @@
 						</div>
 					</div>
 					<p>撰文：諾道團隊</p>
-					<p>已更新：01-03-2025</p>
+					<p>已更新：01-02-2025</p>
 				</div>
 				<div style="text-align: center;">
 					<img src="../images/Article/article018.png" style="max-width: 100%;" />
@@ -216,17 +216,20 @@
 				<hr>
 				<div class="panel-body narrow-text">
 
-					為⼈⽗母都希望⾃⼰的⼩朋友可以做到分享不⾃私、等待不爭玩具；但孩子的各項情緒社交能⼒仍處於發展階段，故此現實中要孩子將心愛的玩具分享，又或要他安靜地等待輪到他玩往往不容易。 以下是幾句如何回應孩子的說話讓⽗母參考：<br><br>
+					為⼈⽗母都希望⾃⼰的⼩朋友可以做到分享不⾃私、等待不爭玩具；但孩子的各項情緒社交能⼒仍處於發展階段，故此現實中要孩子將心愛的玩具分享，又或要他安靜地等待輪到他玩往往不容易。
+					以下是幾句如何回應孩子的說話讓⽗母參考：<br><br>
 
 					1. 你玩緊嘅呢個玩具，我⾒到佢都好想玩，你可以玩多3分鐘跟住到佢。<br>
 					2. 呢個玩具係你嘅，媽媽⿎勵你可以同其他⼩朋友輪流玩；不過如果你選擇唔分享，都係可以<br>&nbsp;&nbsp;&nbsp;&nbsp;嘅，你可以決定。<br>
 					3. ⽽家有⼩朋友玩緊喎，你可以選擇等待或者玩住其他玩具先，下個就到你嘞！<br><br>
 
 					<h4><b>以上的說話有三大原則：</b></h4>
-					一. 讓孩子有時間作心理準備，不是大⼈一講就⽴即要他將玩具交給其他⼩朋友。哪怕只是3分鐘<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;甚或1分鐘都很⾜夠，重點在於讓孩子有緩衝的空間。家長試⾏時，可能會發現未到你設定的<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;時間，孩子就⾃動⾃覺將玩具交出呢！<br>
-					⼆. 「分享」是不能被強迫的。將心比⼰，如果硬要你將心愛重視的東西分一半予他⼈，你又是否<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;心⽢情願？建議讓孩子知道有「分享」這個選擇，⽽且你⿎勵他這樣做。當你將決定權交回孩<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;子⼿中，往往會有喜出望外的結果！<br>
+					一.
+					讓孩子有時間作心理準備，不是大⼈一講就⽴即要他將玩具交給其他⼩朋友。哪怕只是3分鐘<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;甚或1分鐘都很⾜夠，重點在於讓孩子有緩衝的空間。家長試⾏時，可能會發現未到你設定的<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;時間，孩子就⾃動⾃覺將玩具交出呢！<br>
+					⼆.
+					「分享」是不能被強迫的。將心比⼰，如果硬要你將心愛重視的東西分一半予他⼈，你又是否<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;心⽢情願？建議讓孩子知道有「分享」這個選擇，⽽且你⿎勵他這樣做。當你將決定權交回孩<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;子⼿中，往往會有喜出望外的結果！<br>
 					三. 說出眼⾒的客觀事實：「有⼈玩緊」，讓孩子學習掌握社交規則及理解現實限制 。<br><br>
-					
+
 					<h4><b>總結</b></h4>
 					作為⽗母，有時需要審視⾃⼰的一⾏一⾔有否將⾃⼰的期望強加於子女身上。你是否追求當仔仔願意分享⽽獲得稱讚時的那份驕傲？你是否想成為⼈⼈眼中的「好媽媽」？是否害怕當囡囡選擇不分享時被標籤為「⾃私」以及「唔識教」？<br><br>
 
