--- a/article/article017.html
+++ b/article/article017.html
@@ -23,13 +23,13 @@
 	<link href="../css/font-awesome.css" rel="stylesheet">
 	<!-- //font-awesome icons -->
 	<!-- font -->
-	<link href="https://fonts.googleapis.com/css？family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,900,800,700,600,500,300,200,100" rel="stylesheet"
 		type="text/css">
-	<link href="https://fonts.googleapis.com/css？family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
 	<link
-		href="https://fonts.googleapis.com/css？family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
+		href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
 		rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css？family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
+	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
 		rel='stylesheet' type='text/css'>
 	<!-- //font -->
 	<script src="../js/jquery-1.11.1.min.js"></script>
@@ -58,13 +58,13 @@
 		function shareToWhatsApp() {
 			const url = encodeURIComponent(window.location.href);
 			const text = encodeURIComponent('看看這篇文章！');
-			window.open(`https://wa.me/？text=${text} ${url}`, '_blank');
+			window.open(`https://wa.me/?text=${text} ${url}`, '_blank');
 		}
 
 		// Sharing to Facebook
 		function shareToFacebook() {
 			const url = encodeURIComponent(window.location.href); // The current page URL
-			window.open(`https://www.facebook.com/sharer/sharer.php？u=${url}`, '_blank');
+			window.open(`https://www.facebook.com/sharer/sharer.php?u=${url}`, '_blank');
 		}
 
 
@@ -220,9 +220,11 @@
 					如果是這樣的話，你的孩子可能有視覺自我刺激(Visual Stimming)。<br><br>
 
 					更多關於自閉症譜系障礙(ASD)的文章：<br>
-					<a href="https://prowayst.com/article/article014.html"><b style="color: brown;">自閉症譜系障礙5大特徵</b></a><br>
-					<a href="https://prowayst.com/article/article09.html"><b style="color: brown;">自閉症譜系障礙與聲量控制</b></a><br><br>
-				
+					<a href="https://prowayst.com/article/article014.html"><b
+							style="color: brown;">自閉症譜系障礙5大特徵</b></a><br>
+					<a href="https://prowayst.com/article/article09.html"><b
+							style="color: brown;">自閉症譜系障礙與聲量控制</b></a><br><br>
+
 					<h4><b>什麼是視覺自我刺激？</b></h4>
 					視覺自我刺激是自閉症孩子常⾒的一種自我刺激行為。<br><br>
 
@@ -260,14 +262,15 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;例子：用直尺標記閱讀的位置、書寫時用手指為字詞間留出適當空間<br><br>
 
 					<h4><b>如果你的孩子對視覺輸入反應過敏(Over-responsive)：</b></h4>
-					對視覺輸入反應過敏的孩子來說，一些對大部分人來說無關痛癢的感覺，例如環境中的燈光、對他們來說是非常不適， 可能引起極端驚恐或抗拒；因此他們可能希望逃到黑暗的地方。他們亦較難過濾一個空間裡不同的視覺刺激，這會使他們感到不知所措和焦慮、未能選擇專注⽬標。你可以嘗試：<br><br>
+					對視覺輸入反應過敏的孩子來說，一些對大部分人來說無關痛癢的感覺，例如環境中的燈光、對他們來說是非常不適，
+					可能引起極端驚恐或抗拒；因此他們可能希望逃到黑暗的地方。他們亦較難過濾一個空間裡不同的視覺刺激，這會使他們感到不知所措和焦慮、未能選擇專注⽬標。你可以嘗試：<br><br>
 					1. 減少視覺⼲擾<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;例子：讓孩子坐在遠離門窗和佈置得色彩繽紛的牆、將燈光調暗並盡量使用自然光、減少牆壁<br>&nbsp;&nbsp;&nbsp;&nbsp;及天花板懸掛的裝飾<br>
 					2. 進入較強光線或有光暗轉換的環境前先進行預告以讓孩子作心理準備<br>
 					3. 不要強迫孩子進行眼神交流<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;教導孩子看對方眼睛的附近⽽不需直視雙眼。<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;即使沒有眼神交流，孩子也可以是在專心聆聽，不強行要求孩子進行眼神交流甚至可能提高他<br>&nbsp;&nbsp;&nbsp;&nbsp;們處理語⾔訊息的能⼒。<br><br>
-					
+
 					<h4><b>總結</b></h4>
 					自我刺激行為有助孩子調節和平衡感覺，當孩子的感統需要得到滿足，就能更專注於學習及社交的發展！<br>
 					我們不是要阻⽌孩子的自我刺激行為，⽽是希望教導孩子以在發展階梯上更成熟的方式逐步取代社交上較不合適的自我刺激行為， 從⽽減少前者出現的密集度。<br><br>
