--- a/index.html
+++ b/index.html
@@ -181,25 +181,16 @@
 			<div class="w3l-heading">
 				<h3>諾道YOUTUBE頻道</h3>
 			</div>
-			<div style="display: flex; justify-content: center;">
-				<div class="agileits-services">
-					<div class="videos">
-						<div>
-							<!-- <iframe class="latestVideoEmbed custom-iframe" vnum='0' width="600" height="340"
-								frameborder="0" allowfullscreen></iframe>-->
-
-							<iframe width="600" height="340"
-								src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs"
-								title="小朋友發音唔準確又成日流口水⋯" frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-								referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-						</div>
-					</div>
-				</div>
+			<div class="videos">
+				<iframe
+					src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs"
+					title="小朋友發音唔準確又成日流口水⋯" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container" style="margin-top: 20px;">
 			<div class="col-md-12 text-center read-more-container w3-button">
 				<a href="https://www.youtube.com/@prowayspeechtherapy">查看更多</a>
 			</div>
@@ -419,7 +410,7 @@
 					<span><b>敬請預約</b></span>
 				</div>
 
-				<div class="videos col-md-2 agile-footer-grid">
+				<!-- <div class="videos col-md-2 agile-footer-grid">-->
 
 				</div>
 
