--- a/index.html
+++ b/index.html
@@ -182,9 +182,8 @@
 				<h3>諾道YOUTUBE頻道</h3>
 			</div>
 			<div class="videos">
-				<iframe
-					src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs"
-					title="小朋友發音唔準確又成日流口水⋯" frameborder="0"
+				<iframe src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs" title="小朋友發音唔準確又成日流口水⋯"
+					frameborder="0"
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 			</div>
@@ -206,6 +205,28 @@
 			</div>
 			<!-- for section -->
 			<div class="row">
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article019.html">
+								<img src="images/Article/article019.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">孩子咬字發音不準確 =「黐脷筋」？</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 4分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 200 </i>
+									<i class="fa fa-heart-o"> 102 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 				<!-- Repeat this block for each card -->
 				<div class="col-md-4">
 					<div class="card">
@@ -250,28 +271,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article016.html">
-								<img src="images/Article/article016.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">提升親子關係：親子「特別遊戲時間」</h5>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 3分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 187 </i>
-									<i class="fa fa-heart-o"> 113 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+
 
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
@@ -412,9 +412,9 @@
 
 				<!-- <div class="videos col-md-2 agile-footer-grid">-->
 
-				</div>
+			</div>
 
-				<!-- <div class="col-md-4">
+			<!-- <div class="col-md-4">
 						<iframe src="https://www.facebook.com/plugins/likebox.php?href=
 				https%3A%2F%2Fwww.facebook.com%2fprowayspeechtherapy&width=358&
 				colorscheme=light&show_faces=true&border_color&
@@ -425,8 +425,8 @@
 				</div>
 
 				<div class="clearfix"> </div> -->
-			</div>
 		</div>
+	</div>
 	</div>
 	<!-- //footer -->
 	<!-- copyright -->
