--- a/index copy.html
+++ b/index copy.html
@@ -181,25 +181,15 @@
 			<div class="w3l-heading">
 				<h3>諾道YOUTUBE頻道</h3>
 			</div>
-			<div style="display: flex; justify-content: center;">
-				<div class="agileits-services">
-					<div class="videos">
-						<div>
-							<!-- <iframe class="latestVideoEmbed custom-iframe" vnum='0' width="600" height="340"
-								frameborder="0" allowfullscreen></iframe>-->
-
-							<iframe width="600" height="340"
-								src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs"
-								title="小朋友發音唔準確又成日流口水⋯" frameborder="0"
-								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-								referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-						</div>
-					</div>
-				</div>
+			<div class="videos">
+				<iframe src="https://www.youtube.com/embed/JFIR_7dgTKk?si=yrPixhv4QIZyuYGs" title="小朋友發音唔準確又成日流口水⋯"
+					frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 			</div>
 		</div>
 
-		<div class="container">
+		<div class="container" style="margin-top: 20px;">
 			<div class="col-md-12 text-center read-more-container w3-button">
 				<a href="https://www.youtube.com/@prowayspeechtherapy">查看更多</a>
 			</div>
@@ -215,46 +205,44 @@
 			</div>
 			<!-- for section -->
 			<div class="row">
-
 				<!-- Repeat this block for each card -->
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
-							<a href="article/article014.html">
-								<img src="images/Article/article014.png" alt="Card image">
+							<a href="article/article021.html">
+								<img src="images/Article/article021.png" alt="Card image">
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">自閉症譜系障礙5大特徵</h5><br>
-							</a>
-							<p class="card-text">撰⽂：諾道團隊</p>
-							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 8分鐘 </i>
-								<div class="right">
-									<i class="fa fa-eye"> 163 </i>
-									<i class="fa fa-heart-o"> 89 </i>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<!-- Repeat this block for each card -->
-				<div class="col-md-4">
-					<div class="card">
-						<div class="image-container">
-							<a href="article/article013.html">
-								<img src="images/Article/article013.png" alt="Card image">
-								<div class="line"></div>
-						</div>
-						<div class="card-body">
-							<h5 class="card-title">沉默是金？— 認識選擇性緘默症</h5><br>
+							<h5 class="card-title">孩子食飯慢吞吞，真係「曳」咁簡單？</h5>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
 								<i class="fa fa-clock-o left"> 3分鐘 </i>
 								<div class="right">
-									<i class="fa fa-eye"> 112 </i>
+									<i class="fa fa-eye"> 103 </i>
+									<i class="fa fa-heart-o"> 99 </i>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Repeat this block for each card -->
+				<div class="col-md-4">
+					<div class="card">
+						<div class="image-container">
+							<a href="article/article020.html">
+								<img src="images/Article/article020.png" alt="Card image">
+								<div class="line"></div>
+						</div>
+						<div class="card-body">
+							<h5 class="card-title">善用視覺程序時間表幫助ASD孩子</h5>
+							</a>
+							<p class="card-text">撰⽂：諾道團隊</p>
+							<div class="icon-row">
+								<i class="fa fa-clock-o left"> 3分鐘 </i>
+								<div class="right">
+									<i class="fa fa-eye"> 154 </i>
 									<i class="fa fa-heart-o"> 75 </i>
 								</div>
 							</div>
@@ -265,25 +253,24 @@
 				<div class="col-md-4">
 					<div class="card">
 						<div class="image-container">
-							<a href="article/article012.html">
-								<img src="images/Article/article012.png" alt="Card image">
+							<a href="article/article019.html">
+								<img src="images/Article/article019.png" alt="Card image">
 								<div class="line"></div>
 						</div>
 						<div class="card-body">
-							<h5 class="card-title">語言發展的重要基石 ─ 語言前技能(下)</h5>
+							<h5 class="card-title">孩子咬字發音不準確 =「黐脷筋」？</h5>
 							</a>
 							<p class="card-text">撰⽂：諾道團隊</p>
 							<div class="icon-row">
-								<i class="fa fa-clock-o left"> 5分鐘 </i>
+								<i class="fa fa-clock-o left"> 4分鐘 </i>
 								<div class="right">
-									<i class="fa fa-eye"> 199 </i>
-									<i class="fa fa-heart-o"> 92 </i>
+									<i class="fa fa-eye"> 200 </i>
+									<i class="fa fa-heart-o"> 102 </i>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-
 
 				<!-- Repeat this block for each card -->
 				<!--<div class="col-md-4">
@@ -422,11 +409,11 @@
 					<span><b>敬請預約</b></span>
 				</div>
 
-				<div class="videos col-md-2 agile-footer-grid">
+				<!-- <div class="videos col-md-2 agile-footer-grid">-->
 
-				</div>
+			</div>
 
-				<!-- <div class="col-md-4">
+			<!-- <div class="col-md-4">
 						<iframe src="https://www.facebook.com/plugins/likebox.php?href=
 				https%3A%2F%2Fwww.facebook.com%2fprowayspeechtherapy&width=358&
 				colorscheme=light&show_faces=true&border_color&
@@ -437,8 +424,8 @@
 				</div>
 
 				<div class="clearfix"> </div> -->
-			</div>
 		</div>
+	</div>
 	</div>
 	<!-- //footer -->
 	<!-- copyright -->
