--- a/share copy.html
+++ b/share copy.html
@@ -141,6 +141,160 @@
 			<div class="col-md-4">
 				<div class="card">
 					<div class="image-container">
+						<a href="article/article021.html">
+							<img src="images/Article/article021.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">孩子食飯慢吞吞，真係「曳」咁簡單？</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 103 </i>
+								<i class="fa fa-heart-o"> 99 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article020.html">
+							<img src="images/Article/article020.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">善用視覺程序時間表幫助ASD孩子</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 154 </i>
+								<i class="fa fa-heart-o"> 75 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article019.html">
+							<img src="images/Article/article019.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">孩子咬字發音不準確 =「黐脷筋」？</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 4分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 200 </i>
+								<i class="fa fa-heart-o"> 102 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article018.html">
+							<img src="images/Article/article018.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">與其要求孩⼦分享，不如教會他等待輪候</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 111 </i>
+								<i class="fa fa-heart-o"> 87 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article017.html">
+							<img src="images/Article/article017.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">你的ASD孩子有視覺⾃我刺激⾏為嗎?</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 5分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 108 </i>
+								<i class="fa fa-heart-o"> 96 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article016.html">
+							<img src="images/Article/article016.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">提升親子關係：親子「特別遊戲時間」</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 3分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 187 </i>
+								<i class="fa fa-heart-o"> 113 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article015.html">
+							<img src="images/Article/article015.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">孩子到底是哪一種專注力弱？- 認識5大專注力</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 4分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 200 </i>
+								<i class="fa fa-heart-o"> 77 </i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- Repeat this block for each card -->
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
 						<a href="article/article014.html">
 							<img src="images/Article/article014.png" alt="Card image">
 							<div class="line"></div>
@@ -469,13 +623,13 @@
 					<span><b>敬請預約</b></span>
 				</div>
 
-				<div class="videos col-md-2 agile-footer-grid">
 
-				</div>
 
-				<div class="clearfix"> </div>
 			</div>
+
+			<div class="clearfix"> </div>
 		</div>
+	</div>
 	</div>
 	<!-- //footer -->
 	<!-- copyright -->
@@ -507,10 +661,10 @@
 
 	<script type="text/javascript">
 		$(document).ready(function () {
-			var itemsPerPage = 9; 
-			var $cards = $('.card'); 
-			var totalItems = $cards.length; 
-			var totalPages = Math.ceil(totalItems / itemsPerPage); 
+			var itemsPerPage = 9;
+			var $cards = $('.card');
+			var totalItems = $cards.length;
+			var totalPages = Math.ceil(totalItems / itemsPerPage);
 
 			$cards.hide().slice(0, itemsPerPage).show();
 
