--- a/article/article020.html
+++ b/article/article020.html
@@ -216,7 +216,7 @@
 				<hr>
 				<div class="panel-body narrow-text">
 
-					<h4 style="font-size: xx-large;"><b>「視覺程序時間表」是甚麼？</b></h4>
+					<h4><b>「視覺程序時間表」是甚麼？</b></h4>
 
 					「視覺程序時間表」透過實物、照片、圖片甚至文字展示活動的程序，例如「刷牙洗面—>吃早飯—>換校服—>著鞋—>出門口」，或者列出一個任務的一連串步驟，例如刷牙的步驟，「把牙刷從杯子取出來—>打開牙膏蓋……」。<br><br>
 
