--- a/about.html
+++ b/about.html
@@ -153,6 +153,9 @@
 							<b>
 								<P>首席言語治療師 CHIEF ST</P>
 							</b>
+							<p>香港中文大學醫學院言語語言病理理學碩士</p>
+							<p>MSc in Speech-Language Pathology, Faculty of Medicine, CUHK</p>
+							<br>
 							<p>香港中文大學中風及臨床神經科學碩士</p>
 							<p>MSc Stroke And Clinical Neurosciences, CUHK</p>
 							<br>
@@ -179,6 +182,7 @@
 							</b>
 							<p>香港大學言語及聽覺科學系榮譽理學士</p>
 							<p>Bsc(Hons)Speech & Hearing Sciences, HKU</p>
+							<br><br><br><br><br>
 							<!-- end normal -->
 						</div>
 						<div class="w3-button">
@@ -200,6 +204,7 @@
 							</b>
 							<p>香港大學言語及聽覺科學系榮譽理學士</p>
 							<p>Bsc(Hons)Speech & Hearing Sciences, HKU</p>
+							<br><br><br><br><br>
 							<!-- end normal -->
 						</div>
 						<div class="w3-button">
@@ -230,7 +235,7 @@
 						<div class="w3-button">
 							<figure class="effect-apollo">
 								<a class="example-image-link" href="images/nameCard//PROWAY BC_ST PRUDENCE.jpg"
-									data-lightbox="example-set" data-title="Ms. Prudence - 言語治療師 ST<">
+									data-lightbox="example-set" data-title="Ms. Prudence - 言語治療師 ST">
 									卡片</a>
 							</figure>
 						</div>
@@ -314,6 +319,7 @@
 							<br>
 							<p>遊戲治療證書(美國遊戲治療協會)</p>
 							<p>Certificates of Play Therapy (APT)</p>
+							<br>
 							<!-- end normal -->
 						</div>
 						<div class="w3-button">
@@ -404,13 +410,11 @@
 					<span><b>敬請預約</b></span>
 				</div>
 
-				<div class="videos col-md-2 agile-footer-grid">
-
-				</div>
-
-				<div class="clearfix"> </div>
 			</div>
+
+			<div class="clearfix"> </div>
 		</div>
+	</div>
 	</div>
 	<!-- //footer -->
 	<!-- copyright -->
