--- a/index.html
+++ b/index.html
@@ -42,6 +42,51 @@
 	<!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <![endif]-->
+<style>
+/* Modal Box Styles */
+.modal-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1000;
+}
+
+.modal-box {
+    display: none;
+    position: fixed;
+    top:60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 28px;
+    border-radius: 8px;
+    z-index: 1001;
+    max-width: 70%;
+    max-height: 90vh;
+}
+
+.modal-close {
+    position: absolute;
+    top: 2px;
+    right: 10px;
+    font-size: 24px;
+    cursor: pointer;
+    color: #333;
+}
+
+.modal-content img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    max-height: 60vh;
+    width: auto;
+    margin: 0 auto;
+}
+</style>
 </head>
 
 <body>
@@ -487,6 +532,42 @@
 				}
 			});
 		});
+	</script>
+
+	<!-- Modal Box -->
+	<div id="welcomeModal" class="modal-overlay">
+		<div class="modal-box">
+			<span class="modal-close">&times;</span>
+			<div class="modal-content">
+				<a href="interndetail.html"><img src="images/intern/frist_intern.png" alt="Welcome Image"></a>
+			</div>
+		</div>
+	</div>
+
+	<script>
+	document.addEventListener('DOMContentLoaded', function() {
+		const modal = document.getElementById('welcomeModal');
+		const modalBox = modal.querySelector('.modal-box');
+		const closeBtn = modal.querySelector('.modal-close');
+
+		// Show modal when page loads
+		modal.style.display = 'block';
+		modalBox.style.display = 'block';
+
+		// Close modal when clicking the close button
+		closeBtn.onclick = function() {
+			modal.style.display = 'none';
+			modalBox.style.display = 'none';
+		}
+
+		// Close modal when clicking outside the modal
+		window.onclick = function(event) {
+			if (event.target == modal) {
+				modal.style.display = 'none';
+				modalBox.style.display = 'none';
+			}
+		}
+	});
 	</script>
 </body>
 
