--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 								<P>首席言語治療師 CHIEF ST</P>
 							</b>
 							<p>香港中文大學醫學院言語語言病理理學碩士</p>
-							<p>MSc in Speech-Language Pathology, Faculty of Medicine, CUHK</p>
+							<p>Clinical Supervisor, MSc in Speech-Language Pathology, Faculty of Medicine, CUHK</p>
 							<br>
 							<p>香港中文大學中風及臨床神經科學碩士</p>
 							<p>MSc Stroke And Clinical Neurosciences, CUHK</p>
