--- a/interndetail.html
+++ b/interndetail.html
@@ -142,7 +142,7 @@
 			</div>
 			<div class="interndetail-container">
 				<h4>計劃介紹</h4>
-				諾道重視傳承，致力培育更多專業人才陪伴小朋友成長。實習生將獲安排跟隨深言語治療師及社工學習知識和發展專業技能，為畢業後的事業發展做好準備。
+				諾道重視傳承，致力培育更多專業人才陪伴小朋友成長。實習生將獲安排跟隨資深言語治療師及社工學習知識和發展專業技能，為畢業後的事業發展做好準備。
 				<br><br>
 				實習時間：每年7-8月，8星期或以上
 				<br><br>
