--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
 							<b>
 								<P>首席言語治療師 CHIEF ST</P>
 							</b>
-							<p>香港中文大學醫學院言語語言病理理學碩士</p>
+							<p>香港中文大學醫學院言語語言病理理學碩士臨床督導</p>
 							<p>Clinical Supervisor, MSc in Speech-Language Pathology, Faculty of Medicine, CUHK</p>
 							<br>
 							<p>香港中文大學中風及臨床神經科學碩士</p>
